@@ -42,3 +42,4 @@ test: sql/parser
 test: thread/thread
 test: thread/thread_implicit
 test: thread/prep
+test: thread/alloc
