@@ -42,5 +42,6 @@ test: sql/parser
 test: thread/thread
 test: thread/thread_implicit
 test: thread/prep
+test: thread/alloc
 test: connect/test1
 
