@@ -7,7 +7,7 @@
 /* End of automatic include section */
 #define ECPGdebug(X,Y) ECPGdebug((X)+100,(Y))
 
-#line 1 "prep.pgc"
+#line 1 "alloc.pgc"
 #include <stdlib.h>
 #include "ecpg_config.h"
 
@@ -100,7 +100,7 @@ struct sqlca_t *ECPGget_sqlca(void);
 
 #endif
 
-#line 24 "prep.pgc"
+#line 24 "alloc.pgc"
 
 
 #line 1 "regression.h"
@@ -110,14 +110,14 @@ struct sqlca_t *ECPGget_sqlca(void);
 
 
 
-#line 25 "prep.pgc"
+#line 25 "alloc.pgc"
 
 
 /* exec sql whenever sqlerror  sqlprint ; */
-#line 27 "prep.pgc"
+#line 27 "alloc.pgc"
 
 /* exec sql whenever not found  sqlprint ; */
-#line 28 "prep.pgc"
+#line 28 "alloc.pgc"
 
 
 #ifdef WIN32
@@ -133,61 +133,54 @@ static void* fn(void* arg)
 	 
 	   
 	
-#line 39 "prep.pgc"
+#line 39 "alloc.pgc"
  int  value    ;
  
-#line 40 "prep.pgc"
+#line 40 "alloc.pgc"
  char  name [ 100 ]    ;
  
-#line 41 "prep.pgc"
- char  query [ 256 ]   = "INSERT INTO T VALUES ( ? )" ;
+#line 41 "alloc.pgc"
+ char ** r   = NULL ;
 /* exec sql end declare section */
-#line 42 "prep.pgc"
+#line 42 "alloc.pgc"
 
 
 	value = (int)arg;
 	sprintf(name, "Connection: %d", value);
 
 	{ ECPGconnect(__LINE__, 0, "regress1" , NULL, NULL , name, 0); 
-#line 47 "prep.pgc"
+#line 47 "alloc.pgc"
 
 if (sqlca.sqlcode < 0) sqlprint();}
-#line 47 "prep.pgc"
+#line 47 "alloc.pgc"
 
 	{ ECPGsetcommit(__LINE__, "on", NULL);
-#line 48 "prep.pgc"
+#line 48 "alloc.pgc"
 
 if (sqlca.sqlcode < 0) sqlprint();}
-#line 48 "prep.pgc"
+#line 48 "alloc.pgc"
 
 	for (i = 1; i <= REPEATS; ++i)
 	{
-		{ ECPGprepare(__LINE__, NULL, 0, "i", query);
-#line 51 "prep.pgc"
+		{ ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "select  relname  from pg_class where relname = 'pg_class'  ", ECPGt_EOIT, 
+	ECPGt_char,&(r),(long)0,(long)0,(1)*sizeof(char), 
+	ECPGt_NO_INDICATOR, NULL , 0L, 0L, 0L, ECPGt_EORT);
+#line 51 "alloc.pgc"
+
+if (sqlca.sqlcode == ECPG_NOT_FOUND) sqlprint();
+#line 51 "alloc.pgc"
 
 if (sqlca.sqlcode < 0) sqlprint();}
-#line 51 "prep.pgc"
+#line 51 "alloc.pgc"
 
-		{ ECPGdo(__LINE__, 0, 1, NULL, 0, 1, "i", 
-	ECPGt_int,&(value),(long)1,(long)1,sizeof(int), 
-	ECPGt_NO_INDICATOR, NULL , 0L, 0L, 0L, ECPGt_EOIT, ECPGt_EORT);
-#line 52 "prep.pgc"
-
-if (sqlca.sqlcode < 0) sqlprint();}
-#line 52 "prep.pgc"
-
+		free(r);
+		r = NULL;
 	}
-	{ ECPGdeallocate(__LINE__, 0, NULL, "i");
-#line 54 "prep.pgc"
-
-if (sqlca.sqlcode < 0) sqlprint();}
-#line 54 "prep.pgc"
-
 	{ ECPGdisconnect(__LINE__, name);
-#line 55 "prep.pgc"
+#line 55 "alloc.pgc"
 
 if (sqlca.sqlcode < 0) sqlprint();}
-#line 55 "prep.pgc"
+#line 55 "alloc.pgc"
 
 
 	return 0;
@@ -201,37 +194,6 @@ int main (int argc, char** argv)
 #else
 	pthread_t threads[THREADS];
 #endif
-
-	{ ECPGconnect(__LINE__, 0, "regress1" , NULL, NULL , NULL, 0); 
-#line 69 "prep.pgc"
-
-if (sqlca.sqlcode < 0) sqlprint();}
-#line 69 "prep.pgc"
-
-	{ ECPGsetcommit(__LINE__, "on", NULL);
-#line 70 "prep.pgc"
-
-if (sqlca.sqlcode < 0) sqlprint();}
-#line 70 "prep.pgc"
-
-	{ ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "drop table if exists T ", ECPGt_EOIT, ECPGt_EORT);
-#line 71 "prep.pgc"
-
-if (sqlca.sqlcode < 0) sqlprint();}
-#line 71 "prep.pgc"
-
-	{ ECPGdo(__LINE__, 0, 1, NULL, 0, ECPGst_normal, "create  table T ( i int   )    ", ECPGt_EOIT, ECPGt_EORT);
-#line 72 "prep.pgc"
-
-if (sqlca.sqlcode < 0) sqlprint();}
-#line 72 "prep.pgc"
-
-	{ ECPGdisconnect(__LINE__, "CURRENT");
-#line 73 "prep.pgc"
-
-if (sqlca.sqlcode < 0) sqlprint();}
-#line 73 "prep.pgc"
-
 
 #ifdef WIN32
 	for (i = 0; i < THREADS; ++i)
