@@ -2242,5 +2242,10 @@ Mi 26. Sep 12:45:51 CEST 2007
 
 	- Applied patch by ITAGAKI Takahiro <itagaki.takahiro@oss.ntt.co.jp>
 	  to get prepare thread-safe.
+
+Sun, 30 Sep 2007 13:37:31 +0200
+
+	- Applied another patch by ITAGAKI Takahiro <itagaki.takahiro@oss.ntt.co.jp>
+	  to get memory allocation thread-safe. He also did some cleaning up.
 	- Set ecpg library version to 6.0.
 	- Set ecpg version to 4.4.
